# tei-fabric

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/embedded/tei-embassy/: Cargo.toml
crates/embedded/tei-embassy/src/: lib.rs
crates/embedded/tei-ina228/: Cargo.toml  README.md
crates/embedded/tei-ina228/src/: lib.rs
crates/embedded/tei-ledger/: Cargo.toml
crates/embedded/tei-ledger/src/: lib.rs
crates/embedded/tei-rt/: Cargo.toml
crates/embedded/tei-rt/src/: lib.rs
crates/sim/tei-sim-adiabatic/: Cargo.toml
crates/sim/tei-sim-adiabatic/src/: cells.rs  exec.rs  lib.rs  sweep.rs
crates/sim/tei-sim-adiabatic/tests/: analytic.rs  s2lal.rs
crates/sim/tei-sim-circuit/: Cargo.toml
crates/sim/tei-sim-circuit/src/: exec.rs  lib.rs  mna.rs  netlist.rs  solver.rs  transient.rs
crates/sim/tei-sim-circuit/tests/: analytic.rs  mosfet.rs  sparse_solver.rs
crates/sim/tei-sim-core/: Cargo.toml
crates/sim/tei-sim-core/src/: events.rs  exec.rs  ledger.rs  lib.rs  linalg.rs  ode.rs  rng.rs  sparse.rs
crates/sim/tei-sim-crossbar/: Cargo.toml
crates/sim/tei-sim-crossbar/src/: idx.rs  lib.rs  mlp.rs  mnist.rs
crates/sim/tei-sim-crossbar/tests/: analytic.rs  mnist.rs
crates/sim/tei-sim-field/: Cargo.toml
crates/sim/tei-sim-field/src/: field3.rs  grid.rs  grid3.rs  lib.rs  medium3.rs  mode.rs  monitor.rs  port.rs  source.rs  sparams.rs
crates/sim/tei-sim-field/src/gpu/: mod.rs  sim.rs
crates/sim/tei-sim-field/src/gpu/shaders/: inject.wgsl  update_e.wgsl  update_h.wgsl
crates/sim/tei-sim-field/tests/: analytic.rs  f2.rs  f3.rs  f4_gpu.rs
crates/sim/tei-sim-gaussian/: Cargo.toml
crates/sim/tei-sim-gaussian/src/: exec.rs  fidelity.rs  lib.rs  measure.rs  williamson.rs
crates/sim/tei-sim-gaussian/tests/: analytic.rs
crates/sim/tei-sim-photonic/: Cargo.toml
crates/sim/tei-sim-photonic/src/: clements.rs  components.rs  haar.rs  lib.rs  mvm.rs  redheffer.rs
crates/sim/tei-sim-photonic/tests/: analytic.rs
crates/sim/tei-sim-spiking/: Cargo.toml
crates/sim/tei-sim-spiking/src/: lib.rs  lif.rs  network.rs  stdp.rs
crates/sim/tei-sim-spiking/tests/: analytic.rs
crates/sim/tei-sim-stochastic/: Cargo.toml
crates/sim/tei-sim-stochastic/src/: graphs.rs  lib.rs  maxcut.rs  tempering.rs
crates/sim/tei-sim-stochastic/tests/: analytic.rs  tempering.rs
crates/sim/tei-sim-wasm/: Cargo.toml  check.mjs
crates/sim/tei-sim-wasm/examples/: reference.rs
crates/sim/tei-sim-wasm/pkg/: .gitignore  package.json  tei_sim_wasm.d.ts  tei_sim_wasm_bg.wasm.d.ts
crates/sim/tei-sim-wasm/src/: lib.rs
crates/sim/tei-sim-wasm/tests/: identity.rs  native_roundtrip.rs
crates/sim/tei-sim-wasm/tests/fixtures/: native-ref.tsv
crates/tei-cost-surface/: Cargo.toml
crates/tei-cost-surface/src/: lib.rs  presets.rs
crates/tei-cost-surface/tests/: routing.rs
crates/tei-d-baseline/: Cargo.toml
crates/tei-d-baseline/src/: lib.rs
crates/tei-d-in-memory/: Cargo.toml
crates/tei-d-in-memory/src/: lib.rs
crates/tei-d-neuromorphic/: Cargo.toml
crates/tei-d-neuromorphic/src/: lib.rs
crates/tei-d-photonic/: Cargo.toml
crates/tei-d-photonic/src/: lib.rs
crates/tei-d-reversible/: Cargo.toml
crates/tei-d-reversible/src/: lib.rs
crates/tei-d-stochastic/: Cargo.toml
crates/tei-d-stochastic/src/: lib.rs
crates/tei-forge/: Cargo.toml
crates/tei-forge/src/: build.rs  lib.rs  sandbox.rs  validate.rs
crates/tei-forge/tests/: e2e.rs
crates/tei-import/: Cargo.toml  build.rs  onnx.proto
crates/tei-import/src/: lib.rs  op_map.rs  shape_infer.rs
crates/tei-import/tests/: synthetic_onnx.rs
crates/tei-ir/: Cargo.toml
crates/tei-ir/src/: lib.rs
crates/tei-meter/: Cargo.toml
crates/tei-meter/src/: correction.rs  lib.rs  linux.rs
crates/tei-nir/: Cargo.toml
crates/tei-nir/src/: hdf5_reader.rs  lib.rs  nir.rs  price.rs
crates/tei-nir/tests/fixtures/: mlp.nir
crates/tei-stack/: Cargo.toml
crates/tei-stack/src/: lib.rs
crates/tei-substrate-traits/: Cargo.toml
crates/tei-substrate-traits/src/: lib.rs
data/: stack.json
docs/: AWS-FPGA.md  BENCH-BRINGUP.md  CLOUD.md  EMBEDDED-ROADMAP.md  EMBEDDED-TARGETS.md  LANDSCAPE.md  NEUROMORPHIC.md  SIM-ROADMAP.md  SOTA-INGEST.md  STUDIO-DESIGN.md
embedded/teios-app-rp2040/: .gitignore  Cargo.toml  build.rs  memory.x
embedded/teios-app-rp2040/src/: app.rs  fw.rs  lib.rs  main.rs
embedded/teios-core/: Cargo.toml
embedded/teios-core/src/: lib.rs
embedded/teios-h747/: Cargo.toml  README.md  memory.x
embedded/teios-h747/src/: app.rs  fw.rs  lib.rs  main.rs
embedded/teios-nrf52832/: Cargo.toml  README.md  memory.x
embedded/teios-nrf52832/.cargo/: config.toml
embedded/teios-nrf52832/src/: app.rs  fw.rs  lib.rs  main.rs
embedded/teios-ra6m5/: Cargo.toml  README.md  build.rs  memory.x
embedded/teios-ra6m5/.cargo/: config.toml
embedded/teios-ra6m5/src/: app.rs  fw.rs  lib.rs  main.rs  riic.rs
embedded/teios-rp2040/: Cargo.toml  README.md
embedded/teios-rp2040/.cargo/: config.toml
embedded/teios-rp2040/scripts/: elf2uf2.py
embedded/teios-rp2040/src/: fw.rs  main.rs
embedded/teios-rp2350/: Cargo.toml  README.md  build.rs  cargo-config-staged.toml  memory.x
embedded/teios-rp2350/.cargo/: config.toml
embedded/teios-rp2350/scripts/: elf2uf2.py
embedded/teios-rp2350/src/: fw.rs  lib.rs  main.rs
scripts/: fetch-mnist.sh
web/: astro.config.mjs  package.json  pnpm-lock.yaml
web/public/boards/: feather-rp2040.glb  manifest.json  nano-matter.glb  nicla-sense.glb  nicla-voice.glb  pico.glb  portenta-c33.glb  portenta-h7-lite.glb  portenta-h7.glb  tachyon.glb
web/public/teios/: manifest.json  teios-feather-rp2040.uf2  teios-pico.uf2  teios-pico2.uf2
web/public/wasm/: tei_sim_wasm.js  tei_sim_wasm_bg.wasm
web/scripts/: build-board-assets.sh  step2gltf.py
web/src/layouts/: Layout.astro
web/src/pages/: about.astro  cloud.astro  index.astro  run.astro  studio.astro
web/src/styles/: global.css
