[workspace]
resolver = "3"
# Firmware projects build for embedded targets with their own profiles
# and cargo config; they consume crates/embedded/tei-ledger by path.
# teios-core is the board-independent half both firmwares share.
exclude = [
    "embedded/teios-ra6m5",
    "embedded/teios-nrf52832",
    "embedded/teios-h747",
    "embedded/teios-app-rp2040",
    "embedded/teios-core",
    "embedded/teios-rp2350",
    "embedded/teios-rp2040",
]
members = [
    "crates/tei-forge",
    "crates/embedded/tei-ledger",
    "crates/embedded/tei-ina228",
    "crates/tei-stack",
    "crates/tei-ir",
    "crates/tei-substrate-traits",
    "crates/tei-d-baseline",
    "crates/tei-d-photonic",
    "crates/tei-d-in-memory",
    "crates/tei-d-stochastic",
    "crates/tei-d-reversible",
    "crates/tei-d-neuromorphic",
    "crates/tei-cost-surface",
    "crates/sim/tei-sim-core",
    "crates/sim/tei-sim-stochastic",
    "crates/sim/tei-sim-spiking",
    "crates/sim/tei-sim-crossbar",
    "crates/sim/tei-sim-photonic",
    "crates/sim/tei-sim-gaussian",
    "crates/sim/tei-sim-circuit",
    "crates/sim/tei-sim-adiabatic",
    "crates/sim/tei-sim-field",
    "crates/sim/tei-sim-wasm",
    "crates/tei-import",
    "bin/tei-serve",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/openie-dev/tei-fabric"
authors = ["Thermodynamic Edge Intelligence Corp."]

[workspace.dependencies]
# Workspace crates
tei-stack = { path = "crates/tei-stack" }
tei-ir = { path = "crates/tei-ir" }
tei-substrate-traits = { path = "crates/tei-substrate-traits" }
tei-d-baseline = { path = "crates/tei-d-baseline" }
tei-d-photonic = { path = "crates/tei-d-photonic" }
tei-d-in-memory = { path = "crates/tei-d-in-memory" }
tei-d-stochastic = { path = "crates/tei-d-stochastic" }
tei-d-reversible = { path = "crates/tei-d-reversible" }
tei-d-neuromorphic = { path = "crates/tei-d-neuromorphic" }
tei-cost-surface = { path = "crates/tei-cost-surface" }
tei-sim-core = { path = "crates/sim/tei-sim-core" }
tei-sim-stochastic = { path = "crates/sim/tei-sim-stochastic" }
tei-sim-spiking = { path = "crates/sim/tei-sim-spiking" }
tei-sim-crossbar = { path = "crates/sim/tei-sim-crossbar" }
tei-sim-photonic = { path = "crates/sim/tei-sim-photonic" }
tei-sim-gaussian = { path = "crates/sim/tei-sim-gaussian" }
tei-sim-circuit = { path = "crates/sim/tei-sim-circuit" }
tei-sim-adiabatic = { path = "crates/sim/tei-sim-adiabatic" }
tei-sim-field = { path = "crates/sim/tei-sim-field" }
tei-sim-wasm = { path = "crates/sim/tei-sim-wasm" }
tei-import = { path = "crates/tei-import" }

# External
rayon = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

[profile.release]
lto = "thin"
codegen-units = 1
