[package]
name = "tei-d-baseline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Baseline substrate dialect — modern CPU / GPU joule model anchored to measured silicon."

[dependencies]
tei-stack.workspace = true
tei-ir.workspace = true
tei-substrate-traits.workspace = true
