[package]
name = "tei-d-neuromorphic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Neuromorphic substrate dialect — LIF spike-event physics calibrated to Loihi / TrueNorth-class silicon."

[dependencies]
tei-stack.workspace = true
tei-ir.workspace = true
tei-substrate-traits.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
