[package]
name = "tei-forge"
version = "0.1.0"
edition = "2021"
description = "The teiOS app build service: validate a user app body, splice it into a vetted skeleton, compile it for a target board under a sandbox, package a flashable UF2. Studio's CODE→BUILD backend."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
# Board identity is sourced from openie-fpga's chipdb — the single board
# registry. The forge owns only build-specific fields (skeleton, triple,
# packaging, features); name/vendor/chip/price/url come from chipdb.
ofpga-chipdb = { path = "../../../openie-fpga/crates/ofpga-chipdb" }

[dev-dependencies]
# (e2e build test uses only std + the crate)
