[package]
name = "tei-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Workload import — ONNX → Periodic Stack Workload IR."

[dependencies]
tei-stack.workspace = true
tei-ir.workspace = true
prost = "0.13"
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build = "0.13"
