[package]
name = "tei-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Workload IR — graph of Periodic Stack primitive invocations with per-op tensor profiles."

[dependencies]
tei-stack.workspace = true
serde.workspace = true
serde_json.workspace = true
