[package]
name = "teios-ra6m5"
version = "0.1.0"
edition = "2021"
description = "teiOS E1d — Arduino Portenta C33 (Renesas RA6M5, Cortex-M33 @ 200 MHz). Software CRC32 on the M33 raced vs the RA6M5 CRCA hardware-CRC peripheral, priced + dispatched, JSON lines over SCI UART. No mature async HAL — bare-metal cortex-m-rt + ra6m5-pac."
license = "MIT OR Apache-2.0"

[[bin]]
name = "teios-ra6m5"
path = "src/main.rs"

[lib]
name = "teios_ra6m5"
path = "src/lib.rs"

[dependencies]
tei-ledger = { path = "../../crates/embedded/tei-ledger", features = ["serde"] }
teios-core = { path = "../teios-core" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
ra6m5-pac = { version = "0.3", features = ["rt", "crc", "mstp"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
# Transport: semihosting streams the ledger over any attached debug
# probe — no clock/baud/pin-mux bring-up. Production moves to SCI UART
# (the documented bench step).
cortex-m-semihosting = "0.5"
panic-halt = "1.0"
heapless = { version = "0.9", default-features = false }

[dev-dependencies]
serde_json = "1"

[features]
default = ["board-portenta-c33"]
board-portenta-c33 = []

[profile.release]
opt-level = "s"
lto = true
debug = 2
