[package]
name = "teios-ra6m5"
version = "0.1.0"
edition = "2021"
description = "teiOS E1d — Arduino Portenta C33 (Renesas RA6M5, Cortex-M33 @ 200 MHz). Software CRC32 on the M33 raced vs the RA6M5 CRCA hardware-CRC peripheral, priced + dispatched, JSON lines over SCI UART. No mature async HAL — bare-metal cortex-m-rt + ra6m5-pac."
license = "MIT OR Apache-2.0"

[[bin]]
name = "teios-ra6m5"
path = "src/main.rs"

[lib]
name = "teios_ra6m5"
path = "src/lib.rs"

[dependencies]
tei-ledger = { path = "../../crates/embedded/tei-ledger", features = ["serde"] }
teios-core = { path = "../teios-core" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
ra6m5-pac = { version = "0.3", features = ["rt", "crc", "mstp", "iic0"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
# The teiOS runtime kernel (Ctx = (); M33 + CRCA substrates are free fns).
tei-rt = { path = "../../crates/embedded/tei-rt" }
# Measured-tier joules (optional): the INA228 EnergyMeter over our own RIIC
# master driver (src/riic.rs), which implements embedded-hal 1.0 I2c. Brings
# the C33 onto the Measured path despite the bare-metal (no-HAL) image.
embedded-hal = { version = "1.0", optional = true }
tei-ina228 = { path = "../../crates/embedded/tei-ina228", optional = true }
# Transport: semihosting streams the ledger over any attached debug
# probe — no clock/baud/pin-mux bring-up. Production moves to SCI UART
# (the documented bench step).
cortex-m-semihosting = "0.5"
panic-halt = "1.0"
heapless = { version = "0.9", default-features = false }

[dev-dependencies]
serde_json = "1"

[features]
default = ["board-portenta-c33"]
board-portenta-c33 = []
# Measured-tier joules: INA228 on IIC0 (SCL/SDA per the C33 carrier). Ledger
# reports JoulesSource::Measured. Pulls in our RIIC master + embedded-hal.
measured-ina228 = ["dep:tei-ina228", "dep:embedded-hal"]

[profile.release]
opt-level = "s"
lto = true
debug = 2
