# teiOS E1a — RP2040 firmware (Adafruit Feather RP2040 / Raspberry Pi Pico).
#
# Standalone project (excluded from the root workspace: different target,
# embedded-only dependency tree). Build with
#
#     cargo build --release --target thumbv6m-none-eabi
#
# (`.cargo/config.toml` makes that the default, so plain
# `cargo build --release` also works). Host tests run the `lib`
# portion only:
#
#     cargo test --lib --target aarch64-apple-darwin

[package]
name = "teios-rp2040"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "teiOS E1a: priced-primitive dispatch demo on RP2040 — CRC32 on cpu vs DMA sniffer, event ledger streamed as JSON lines over USB CDC."

[features]
# Exactly one board feature: it sets the board_id stamped on every JSON
# line AND selects the matching boot2 second-stage flash bootloader
# (the RP2040 boot ROM loads 256 bytes of flash-chip-specific XIP setup
# code before the vector table — a real per-board difference).
default = ["board-feather-rp2040"]
# Adafruit Feather RP2040 — GD25Q64C 8 MiB QSPI flash.
board-feather-rp2040 = ["embassy-rp/boot2-gd25q64cs"]
# Raspberry Pi Pico (1) — W25Q16JV 2 MiB QSPI flash (W25Q080-class boot2).
board-pico = ["embassy-rp/boot2-w25q080"]

[dependencies]
# The TEI Embedded device contract (E0). Core only — no serde on target;
# the wire format is produced by teios-core's hand-rolled JSON writer
# and locked to tei-ledger's serde shape by host tests.
tei-ledger = { path = "../../crates/embedded/tei-ledger" }
# Board-independent firmware core shared with teios-rp2350: CRC32
# substrate, deterministic workload, JSON-lines writers.
teios-core = { path = "../teios-core" }
heapless = { version = "0.9", default-features = false }

# Firmware-only dependencies: never built for the host, so `cargo test`
# on the host triple stays pure-Rust and fast.
[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.10.0", features = ["rp2040", "time-driver", "critical-section-impl", "binary-info", "unstable-pac"] }
embassy-time = "0.5.1"
embassy-usb = "0.6.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
static_cell = "2.1"
# thumbv6m (M0+) has no atomic CAS: route portable-atomic (used by
# static_cell and embassy internals) through critical-section, which
# embassy-rp's critical-section-impl provides.
portable-atomic = { version = "1", features = ["critical-section"] }
panic-halt = "1.0"

[dev-dependencies]
# Host tests pin the hand-rolled JSON writer to the canonical serde shape.
tei-ledger = { path = "../../crates/embedded/tei-ledger", features = ["serde"] }
serde_json = "1"

[profile.release]
debug = true       # symbols in the ELF; stripped from the UF2 by picotool
lto = "fat"
codegen-units = 1
