[package]
name = "tei-sim-adiabatic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "aa-class (DeBenedictis) adiabatic-logic cell templates + ramp-time energy sweeps on tei-sim-circuit — see docs/SIM-ROADMAP.md §3.6."

[dependencies]
tei-sim-core = { path = "../tei-sim-core" }
tei-sim-circuit = { path = "../tei-sim-circuit" }
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
