[package]
name = "tei-sim-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tei-sim circuit column — see docs/SIM-ROADMAP.md."

[dependencies]
tei-sim-core = { path = "../tei-sim-core" }
serde.workspace = true
serde_json.workspace = true
